--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "^15.1.5",
     "next-sanity": "^9.8.38",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "sanity": "^3.70.0",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.14",
@@ -39,6 +45,6 @@
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
