--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
+    "@sentry/nextjs": "^8.51.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "sanity": "^3.70.0",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.14",
+    "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
